--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -15,12 +15,17 @@
       {
         "index": 2,
         "name": "Enemy"
+      },
+      {
+        "index": 3,
+        "name": "Reward"
       }
     ],
     "collisionMatrix": {
-      "0": 5,
+      "0": 13,
       "1": 4,
-      "2": 3
+      "2": 3,
+      "3": 1
     }
   }
 }
