--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,7 +3,9 @@
   "general": {
     "designResolution": {
       "width": 480,
-      "height": 850
+      "height": 850,
+      "fitHeight": false,
+      "fitWidth": true
     }
   },
   "physics": {
@@ -33,5 +35,6 @@
       "name": "GAME",
       "value": 1
     }
-  ]
+  ],
+  "custom_joint_texture_layouts": []
 }
